fix: prevent horizontally scrollable root overflow

--- a/src/layout/components/root.module.scss
+++ b/src/layout/components/root.module.scss
@@ -1,5 +1,5 @@
 .root {
 	position: relative;
-	min-width: 100vw;
+	min-width: 100%;
 	min-height: 100vh;
 }
